--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (396.51-1~git1) UNRELEASED; urgency=medium
+
+  * New upstream short lived branch release 396.51 (2018-08-03).
+    - Added support for VK_EXT_vertex_attribute_divisor.
+    - Added support for the following GPU: Quadro P3200 with Max-Q Design.
+
+ -- Luca Boccassi <bluca@debian.org>  Fri, 03 Aug 2018 22:39:02 +0100
+
 nvidia-graphics-drivers (396.45-1) experimental; urgency=medium
 
   * New upstream short lived branch release 396.45 (2018-07-19).
