--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (340.107-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Convert packaging repository from SVN to GIT.
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 21 Jun 2018 22:28:56 +0200
 
