--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
     triggers handle it instead (384.111-3).
   * Use dh_missing --fail-missing (384.111-4).
   * Include again the amd64 blob to build amd64 kernel modules on i386.
+  * Synchronize the module build debhelper sequence with debhelper 10.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
 
