--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (396.54-1~git1) UNRELEASED; urgency=medium
+
+  * New upstream short lived branch release 396.54 (2018-08-21).
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 10 Sep 2018 16:11:07 +0200
+
 nvidia-graphics-drivers (396.51-1) experimental; urgency=medium
 
   * New upstream short lived branch release 396.51 (2018-08-03).
