--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,7 @@ nvidia-graphics-drivers (410.57-1~git1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
+  * Drop drm-mode.patch, fixed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 21 Sep 2018 16:12:56 +0200
 
