--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (396.54-2) UNRELEASED; urgency=medium
 
   * Drop do-div-cast.patch, 32-bit platforms are no longer supported.
+  * Revert move of libglx.so to /usr/lib/nvidia/current/modules.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 21 Sep 2018 15:56:24 +0200
 
