--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,7 @@ nvidia-graphics-drivers (410.57-1~git1) UNRELEASED; urgency=medium
   * libglx.so has been replaced by libglxserver_nvidia.so.
   * Remove ModulePath workarounds since we no longer collide with the Xorg
     module libglx.so.
+  * Update symbols files.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 21 Sep 2018 16:12:56 +0200
 
