--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ nvidia-graphics-drivers (410.57-1~git1) UNRELEASED; urgency=medium
     implementing the Vulkan real-time ray tracing extensions.
   * libnvoptix1: New package for the implementation of the OptiX ray tracing
     engine for NVIDIA/CUDA.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 21 Sep 2018 16:12:56 +0200
 
