--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
   * Use dh_missing --fail-missing (384.111-4).
   * Include again the amd64 blob to build amd64 kernel modules on i386.
   * Synchronize the module build debhelper sequence with debhelper 10.
+  * Pass the private library directory to dh_shlibdeps using the -l option
+    instead of LD_LIBRARY_PATH, fixing FTBFS with dpkg 1.19.1 (390.87-3).
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
 
