Add code to generate debian/control.
Generate debian/control from debian/control.in using substvars in Package
and Source, in which they are disallowed in debian/control. Re-use the same
variables that debian/rules already sets. The debian/gen-control.pl script
reuses the Dpkg Perl library and losely follows dpkg-gencontrol, while
only looking at both Package and Source, rather than all fields.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (390.87-4) UNRELEASED; urgency=medium
+
+  [ Philipp Kern ]
+  * debian/gen-control.pl: Generate debian/control from debian/control.in.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Nov 2018 19:27:06 +0100
+
 nvidia-graphics-drivers (390.87-3) unstable; urgency=medium
 
   * Make libgles-nvidia1 a full citizen again, libglvnd now builds libgles1.
