add changelog entry for d/rules updates

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,11 +33,13 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
     triggers handle it instead (384.111-3).
   * Use dh_missing --fail-missing (384.111-4).
   * Include again the amd64 blob to build amd64 kernel modules on i386.
-  * Synchronize the module build debhelper sequence with debhelper 10.
+  * Synchronize the module build debhelper sequence with debhelper 10
+    (390.87-1).
   * Pass the private library directory to dh_shlibdeps using the -l option
     instead of LD_LIBRARY_PATH, fixing FTBFS with dpkg 1.19.1 (390.87-3).
   * Add Build-Depends-Package to symbols files where appropriate and override
     symbols-file-missing-build-depends-package-field elsewhere (390.87-3).
+  * Clean up and unify rule style in debian/rules (390.87-3).
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
 
