--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (396.54-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (396.54-2) experimental; urgency=medium
 
   * Drop do-div-cast.patch, 32-bit platforms are no longer supported.
   * Revert move of libglx.so to /usr/lib/nvidia/current/modules.
   * Merge changes from 390.87-3.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 21 Sep 2018 15:56:24 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Nov 2018 20:06:14 +0100
 
 nvidia-graphics-drivers (396.54-1) experimental; urgency=medium
 
