--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (396.54-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (396.54-3) experimental; urgency=medium
 
   * Merge changes from 390.87-4.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 11 Dec 2018 03:36:23 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 11 Dec 2018 06:11:16 +0100
 
 nvidia-graphics-drivers (396.54-2) experimental; urgency=medium
 
