--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (410.78-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (410.78-2) experimental; urgency=medium
 
   * Merge changes from 396.54-3.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 11 Dec 2018 06:29:11 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 14 Dec 2018 12:41:04 +0100
 
 nvidia-graphics-drivers (410.78-1) experimental; urgency=medium
 
