--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (396.54-4) UNRELEASED; urgency=medium
+
+  * Drop libgles[12]-nvidia transitional packages.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 14 Dec 2018 12:59:57 +0100
+
 nvidia-graphics-drivers (396.54-3) experimental; urgency=medium
 
   * Merge changes from 390.87-4.
