new upstream short lived branch release 415.25

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-nvidia-graphics-drivers (415.23-1~git1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (415.25-1~git1) UNRELEASED; urgency=medium
 
+  * New upstream short lived branch release 415.25 (2018-12-18).
+    - Added support for the following GPU: TITAN RTX.
   * New upstream short lived branch release 415.23 (2018-12-12).
   * New upstream short lived branch release 415.22 (2018-12-07).
     - Fixed a regression that prevented applications based on the Unity engine
@@ -51,7 +53,7 @@ nvidia-graphics-drivers (415.23-1~git1) UNRELEASED; urgency=medium
   * Update symbols files.
   * Update lintian overrides.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 09 Dec 2018 20:39:29 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 19 Dec 2018 23:44:21 +0100
 
 nvidia-graphics-drivers (410.93-2) unstable; urgency=medium
 
