--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (410.93-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (410.93-1) experimental; urgency=medium
 
   * New upstream long lived branch release 410.93 (2019-01-03).
     - Fixed a bug that could prevent display detection from working on
@@ -20,7 +20,7 @@ nvidia-graphics-drivers (410.93-1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Merge changes from 390.87-6.
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 07 Jan 2019 22:07:14 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 09 Jan 2019 10:34:41 +0100
 
 nvidia-graphics-drivers (410.78-2) experimental; urgency=medium
 
